--- a/js-express-middleware-and-cookies/views/partials/header.ejs
+++ b/js-express-middleware-and-cookies/views/partials/header.ejs
@@ -5,5 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body style="border:solid 40px purple;padding:40px;">
