--- a/js-express-middleware-and-cookies/views/partials/header.ejs
+++ b/js-express-middleware-and-cookies/views/partials/header.ejs
@@ -5,6 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/main.css">
+
+<%# The order of the scripts matters %>
+<%# Please "import" jquery then popper and finally bootstrap %>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/popper.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
 </head>
-<body style="border:solid 40px purple;padding:40px;">
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Express App</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/hello_world">Hello World</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/survey">Survey</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="container">
