--- a/js-express-middleware-and-cookies/views/partials/header.ejs
+++ b/js-express-middleware-and-cookies/views/partials/header.ejs
@@ -31,6 +31,15 @@
       <li class="nav-item">
         <a class="nav-link" href="/survey">Survey</a>
       </li>
+      <li class="nav-item">
+        <% if(signInUser) { %>
+            <form action="/sign_out" method="POST" class="form-inline">
+              <button class="btn btn-outline-dark" type="submit">Sign Out</button>
+            </form>
+        <% } else { %>
+           <a class="nav-link" href="/sign_in">Sign In</a>
+        <% } %>
+      </li>
     </ul>
   </div>
 </nav>
