adding and updating classes and IDs

--- a/js_document_object_model/css/master.css
+++ b/js_document_object_model/css/master.css
@@ -99,6 +99,10 @@ html * {
   filter: grayscale(1);
 }
 
+.selected {
+  background-color: yellow;
+}
+
 #toxic-tim {
   background-image: url(../images/toxic_tim.jpg);
 }
